# PKGBUILDs

./: .gitlab-ci.yml  .travis.yml  README.md
aminnj-pyfiles/: PKGBUILD  commands_fix.patch  str_encode_fix.patch
bibtex-cmstdr/: PKGBUILD
classlib/: PKGBUILD  TempFile.patch  Time.patch  ptrdiff_t.patch
cms-higgs-combine/: CMakeLists.txt  PKGBUILD
cms-higgs-combine-8/: PKGBUILD  root-v6-22.patch
cms-md5/: PKGBUILD
cmssw/: AnalyticalCurvilinearJacobianSSE.patch  L1TMuon.patch  PKGBUILD  SimDataFormatsValidationFormats.patch  clean_buildfiles.py  cmssw_cmake.py  config.yml  portable_iarchive.patch  portable_oarchive.patch  templateInstantiations.patch
cmssw-coral/: PKGBUILD
cmssw/examples/MyAnalyzer/: CMakeLists.txt  README.md
cmssw/examples/MyAnalyzer/plugins/: MyAnalyzer.cc
cmssw/examples/MyAnalyzer/python/: MyAnalyzer_cfg.py
cmstdr/: PKGBUILD
coral/: 0001-refresh-coral-for-cmake-compilation.patch  CMakeLists.txt  PKGBUILD  config.yml  generate_cmake.py
dd4hep/: DigiKernel.patch  PKGBUILD  tbb_fix_1.patch  tbb_fix_2.patch
fastforest/: PKGBUILD
gaudi/: PKGBUILD  sys_siglist-fix.patch
geant4/: PKGBUILD
heppdt/: PKGBUILD
higgs-combine/: CMakeLists.txt  PKGBUILD  ShapeTools.patch  root-v6-20.patch
igprof-git/: PKGBUILD  igprof_fix-compilation.patch
libcms-md5/: PKGBUILD
lwtnn/: PKGBUILD
madgraph/: PKGBUILD  python2.patch
madgraph-models/: PKGBUILD
onnxruntime/: PKGBUILD
python-plottery/: PKGBUILD
rooutil/: PKGBUILD
vivado/: PKGBUILD
